	Skip nodes if no references in previous or next node, as was done
	before.  Cycle round the node's references when
	cursor-movement-scrolls=Off.
	(info_move_to_xref): Handling of cursor-movement-scrolls removed.

	* info/session.c (ask_for_search_string): Don't crash if the user
	pressed return without typing anything.
	* info/t/search-empty.sh: New test.

2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Update an automatic footnotes
	window if we change node.

	* info/session.c (get_input_key_internal): Don't time-out key press if
	'key-time' is 0.
	* doc/info-stnd.texi (Variables): Document 'key-time' variable.

	* info/variables.c (info_variables): Rename 'preprocess-nodes' user
	variable to 'hide-note-references'.
	* doc/info-stnd.texi (Variables): Document 'hide-note-references'
	variable.

2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Go back to being
	case-insensitive if all upper-case letters are deleted.
	* info/t/inc-sea-insensitive.sh: New test.

2014-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (recalculate_line_starts, calculate_line_starts):
	Renamed.  Don't free 'line_starts' and 'log_line_no'.  Callers
	updated.
	(window_toggle_wrap): Call display_scroll_line_starts as was done
	before.

2014-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_follow_menus): Free error argument before
	overwriting it.
	(info_search_in_node_internal): Set goal column after search.
	(info_search_previous): Work correctly when the match is an exact
	number of screen-fulls away.

	* info/window.c (window_new_screen_size): Try to resize windows
	evenly.

2014-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/m-x.c (info_execute_command): Free a string.  Allow arbitarily
	long prompts.
	* info/info.c (main): Exit with exit() instead of 'return' to avoid
	memory leak report from valgrind for main's local variables.